--- a/src/app.css
+++ b/src/app.css
@@ -38,8 +38,8 @@ background: linear-gradient(to top, #434343, #000000);
  }
  button {
      float: right;
-     width: 90px;
-     height: 40px;
+     width: 85px;
+     height: 35px;
      font-family: 'Roboto', sans-serif;
      font-size: 20px;
      font-weight: 600;
@@ -47,11 +47,20 @@ background: linear-gradient(to top, #434343, #000000);
      background-color: #f57300;
      border-color: #fab237;
      border-radius: 5%;
+     margin: 0.5% 1% 0 0.5%;
  }
 
  .parent-ul {
      display: inline-flex;
      align-items: center;
+ }
+
+ .barra-laranja {
+     width: 100%;
+     height: 5px;
+     background-color: #fab237;
+     display: block;
+     position: relative;
  }
  
 
