--- a/src/app.css
+++ b/src/app.css
@@ -18,31 +18,31 @@ html {
 background: -webkit-linear-gradient(to top, #434343, #000000); 
 background: linear-gradient(to top, #434343, #000000);
     height: 100%;
-    width: 100%; 
+    width: 100%;
+    font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif ; 
 }
+
+/* Primary navigation bar styling */
 
  nav {
      background-color: #060606;
-     font-family: 'Roboto', sans-serif;
      font-size: 20px;
      width: 100%;
-     
-
  }
 
  li {
-     color: whitesmoke;
+     color: #cfcfcf;
      padding: 3%;
      display: inline-flex;
-
+     margin-left: 8%;
  }
+
  button {
      float: right;
      width: 85px;
      height: 35px;
-     font-family: 'Roboto', sans-serif;
      font-size: 20px;
-     font-weight: 600;
+     font-weight: 400;
      color: whitesmoke;
      background-color: #f57300;
      border-color: #fab237;
@@ -55,6 +55,12 @@ background: linear-gradient(to top, #434343, #000000);
      align-items: center;
  }
 
+ .home {
+     margin-left: 20%;
+ }
+
+ /* Secondary navigation bar styling */
+
  .barra-laranja {
      width: 100%;
      height: 5px;
@@ -63,7 +69,17 @@ background: linear-gradient(to top, #434343, #000000);
      position: relative;
  }
  
+.barra-inferior {
+    width: 100%;
+    height: 30px;
+    background-color: #7c7c7c;
+}
 
+.inferior {
+    display: inline;
+    margin: 0;
+    color: whitesmoke;
+}
 
 
 
