--- a/src/app.css
+++ b/src/app.css
@@ -15,8 +15,8 @@
 
 html {
     background: #000000; 
-background: -webkit-linear-gradient(to top, #434343, #000000); 
-background: linear-gradient(to top, #434343, #000000);
+    background: -webkit-linear-gradient(to top, #434343, #000000); 
+    background: linear-gradient(to top, #434343, #000000);
     height: 100%;
     width: 100%;
     font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif ; 
@@ -73,6 +73,7 @@ background: linear-gradient(to top, #434343, #000000);
     width: 100%;
     height: 30px;
     background-color: #7c7c7c;
+    box-shadow: 0 1px 5px #cfcfcf;
 }
 
 .inferior {
@@ -81,7 +82,48 @@ background: linear-gradient(to top, #434343, #000000);
     color: whitesmoke;
 }
 
+/* Table Content styling */
 
+table {
+    width: 60%;
+    border: 1px solid #7c7c7c;
+    border-collapse: collapse;
+    text-align: center;
+    font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif ; 
+}
+
+
+th, td {
+    padding: 10px;
+    border: 1px solid #7c7c7c;
+    color: #060606;
+    
+}
+
+th {
+    background-color: #cfcfcf;
+}
+/* muda a cor quando passa o mouse não está funcionando */
+tr:hover {
+    background-color: black;
+}
+/* coloca a tabela zebrada verificar */ 
+tr:nth-child(even) {
+    background-color: #ffffff;
+}
+
+.container {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10%;
+}
+
+.nome {
+    width: 30%;
+}
 
 
 
