--- a/src/app.css
+++ b/src/app.css
@@ -1,11 +1,6 @@
-@font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxK.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-  }
+/* Arquivo de estilização usado para todos os componentes que receberam estilização */
+
+/* General styling */
 
 * {
     box-sizing: border-box;
@@ -36,10 +31,6 @@ html {
      display: inline-flex;
      margin-left: 8%;
      text-shadow: 0.5px 0.5px 0.5px; 
- }
-
- li:hover {
-     color: #060606;
  }
 
  button {
@@ -92,6 +83,10 @@ html {
     color: whitesmoke;
 }
 
+.inferior:hover {
+    color: #060606;
+}
+
 /* Table Content styling */
 
 table {
@@ -134,118 +129,3 @@ tr:nth-child(even) {
 .nome {
     width: 30%;
 }
-
-
-
-
-
-
-
-
-  /** {
-    box-sizing: border-box;
-}
-  html {
-      font-size: 20px;
-      background: #000000; 
-background: -webkit-linear-gradient(to top, #434343, #000000); 
-background: linear-gradient(to top, #434343, #000000); 
-
-      height: 100%;
-      width: 100%;
-  }
-/* Navigation Bar stying */
-
-/*nav {
-    position: fixed;
-    width: 100%;
-    height: 12%;
-    background-color: #060606;
-    top: 0;
-    left: 0;
-
-}
-
-li {
-    display: inline;
-    margin: 0 20px;
-    color: whitesmoke;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 600;
-    font-size: 0.9rem;
-    padding: 7px;
-    top: 2.5%
-}
-
-.search {
-    width: 20px;
-    height: 20px;
-    position: fixed;
-    left: 89%;
-    top: 3%;
-}
-
-.login-button {
-    background-color: #FAB237;
-    color: whitesmoke;
-    border-color: #FAB237;
-    border-radius: 8%;
-    width: 5%;
-    height: 3.5%;
-    font-family: 'Roboto', serif;
-    font-weight: 600;
-    text-align: center;
-    font-size: 90%;
-    position: fixed;
-    left: 92%;
-    top: 2.5%;
-}
-
-.wiki {
-    left: 10%;
-}
-
-.noticias {
-    left: 20%;
-}
-
-.analises {
-    left: 30%;
-}
-
-.barra-inferior {
-    background-color: #747474;
-    width: 100%;
-    position: fixed;
-    top: 8%;
-    height: 8%;
-    min-height: 5%;
-}
-
-.inferior {
-    color: whitesmoke;
-    display: inline;
-    top: 8%;
-    margin-top: 0.25%;
-    font-size: 85%;
-}
-
-.cripto {
-    background-color: whitesmoke; 
-    color: #747474;   
-}
-
-.lista {
-    left: 10%;
-    margin: 0 10% 0 10%;
-}
-
-.conversor {
-    left: 22%;
-    margin: 0 20% 0 20%;
-}
-
-.graficos {
-    left: 30%;
-    margin: 0 20% 0 25%;
-}*/
